--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ hashbrown = { version = ">= 0.9, < 0.13", optional = true }
 indexmap = { version = ">= 1.6, < 1.8", optional = true }
 num-bigint = { version = "0.4", optional = true }
 num-complex = { version = ">= 0.2, < 0.5", optional = true }
+rust_decimal = { version = ">= 1.0", optional = true }
 serde = { version = "1.0", optional = true }
 
 [dev-dependencies]
@@ -103,6 +104,7 @@ full = [
     # "multiple-pymethods", # TODO re-add this when MSRV is greater than 1.62
     "chrono",
     "num-bigint",
+    "rust_decimal",
     "num-complex",
     "hashbrown",
     "serde",
@@ -170,5 +172,5 @@ members = [
 
 [package.metadata.docs.rs]
 no-default-features = true
-features = ["macros", "num-bigint", "num-complex", "hashbrown", "serde", "multiple-pymethods", "indexmap", "eyre", "chrono"]
+features = ["macros", "num-bigint", "rust_decimal", "num-complex", "hashbrown", "serde", "multiple-pymethods", "indexmap", "eyre", "chrono"]
 rustdoc-args = ["--cfg", "docsrs"]
